--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jk-react-component-lib",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "peerDependencies": {
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
@@ -50,6 +50,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/JulietKilo2/my-component-library"
   }
 }
