--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
-    "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
     "@babel/cli": "^7.19.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "cross-env": "^7.0.3"
   },
   "scripts": {
