--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@babel/cli": "^7.19.3",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "jest": "^27.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,5 +55,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/JulietKilo2/my-component-library"
+  },
+  "dependencies": {
+    "react-uuid": "^2.0.0"
   }
 }
